@@ -9,7 +9,7 @@ e-2.6-1
 flatlaf-1.6.4
 idea-icons-20210508
 isabelle_fonts-20211004
-isabelle_setup-20220323
+isabelle_setup-20220701
 jdk-17.0.2+8
 jedit-20211103
 jfreechart-1.5.3
@@ -21,7 +21,7 @@ opam-2.0.7
 pdfjs-2.12.313
 polyml-test-15c840d48c9a
 postgresql-42.2.24
-scala-2.13.5-1
+scala-3.1.3
 smbc-0.4.1
 spass-3.8ds-2
 sqlite-jdbc-3.36.0.3
